--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <!-- FontAwesome -->
@@ -10,8 +11,14 @@
     <title>Prueba Bootstrap</title>
 </head>
 <body>
-    <h1 class="display-4">Hola mundo!</h1>
-    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="#" class="navbar-brand">Navbar</a>
+    </nav>
+    <main>
+        <div class="container">
+            <h1>Hola mundo!</h1>
+        </div>
+    </main>
 
     <script src="js/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
