--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="#" class="navbar-brand">Navbar</a>
+        <!--inicio boton despliega barra-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barraAbajo">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--fin boton despliega barra-->
+        <div class="collapse navbar-collapse" id="barraAbajo">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Inicio</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="#" class="nav-link">Productores</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Acerca de</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <main>
         <div class="container">
